--- a/cap5.html
+++ b/cap5.html
@@ -48,6 +48,19 @@
     </section>
        
        <section> <h2> Listas </h2> </section>
+       Lista desordenada
+       <ul> 
+           <li>Elemento 1</li>
+           <li>Elemento 2</li>
+           <li>Lista anidada<ul> 
+               <li>Elem 1</li>
+               <li>Elem 2</li>
+               <li>Elem 3</li>
+           </ul></li>
+           <li>Elemento 4</li>
+           <li>Elemento 3</li>
+           
+       </ul>
         </div>
 
     <footer>
