etiquetas nav en html

--- a/cap5.html
+++ b/cap5.html
@@ -15,11 +15,24 @@
     <!-- este es mi primer ejemplo con HTML  -->
 
     <header>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li><a href="http://www.google.es">Google</a></li>
+                <li><a href="http://www.w3c.org">W3c</a></li>
+                <li><a href="http://www.Yahoo.es">Yahoo</a></li>
+                <li><a href="http://www.translate.google.com">Translate</a></li>
+            </ul>
+        </nav>
     </header>
     
     <aside>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li><a href="#">Uno</a></li>
+                <li><a href="#">Dos</a></li>
+                <li><a href="#">Tres</a></li>
+            </ul>
+        </nav>
     </aside>
     <div id="contents">
         
